--- a/package.json
+++ b/package.json
@@ -20,9 +20,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^6.12.0",
+    "@fastify/view": "^8.2.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.2.8",
+    "@nestjs/platform-socket.io": "^10.2.8",
+    "@nestjs/swagger": "^7.1.15",
+    "@nestjs/websockets": "^10.2.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "handlebars": "^4.7.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -33,6 +43,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
